Update azure-pipelines-linux.yml for Azure Pipelines

--- a/azure-pipelines-linux.yml
+++ b/azure-pipelines-linux.yml
@@ -10,7 +10,7 @@ trigger:
 jobs:
 - job: LinuxCI
   pool:
-    name: Default
+    name: ROS Agent
     demands:
     - Agent.OS -equals Linux
   steps:
